// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide has currentSlideIndex equals index: class name should has active value 1`] = `
<img
  alt="fake-text"
  className="slide active"
  onClick={[Function]}
  src="fake-url"
/>
`;

exports[`renders correctly 1`] = `
<img
  alt="fake-text"
  className="slide"
  onClick={[Function]}
  src="fake-url"
/>
`;
